oauth2: Rollback toList change.